--- a/package.json
+++ b/package.json
@@ -13,5 +13,13 @@
   },
   "devDependencies": {
     "electron": "38.4.0"
+  },
+  "dependencies": {
+    "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "cros": "^1.1.0",
+    "express": "^5.1.0",
+    "mysql2": "^3.15.3"
   }
 }
