--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "private": true,
   "scripts": {
     "start": "electron .",
-    "start-server": "node server/server.js"
+    "start-server": "node server/server.js",
+    "test": "jest --detectOpenHandles"
   },
   "engines": {
     "node": "22.21.0"
   },
   "devDependencies": {
-    "electron": "38.4.0"
+    "electron": "^38.4.0",
+    "jest": "^30.2.0",
+    "supertest": "^7.1.4"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
