--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,16 @@
 # Dependencies
 /node_modules
-/server/node_modules
+/back/node_modules
+/front/node_modules
+
+# Coverage and Testing
+/coverage
+.nyc_output
+lcov.info
+__tests__/
 
 # Configuration files
-/server/dbconfig.js
-
-# Documentation
-# README.md
+/back/server/dbconfig.js
 
 # OS generated files
 .DS_Store
@@ -16,3 +20,13 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Environment
+.env
+.env.local
