--- a/back/package.json
+++ b/back/package.json
@@ -5,16 +5,10 @@
   "main": "server/server.js",
   "private": true,
   "scripts": {
-    "start": "node server/server.js",
-    "dev": "node server/server.js",
-    "test": "jest --config ./config/jest.config.js --detectOpenHandles"
+    "start": "node server/server.js"
   },
   "engines": {
-    "node": "22.21.0"
-  },
-  "devDependencies": {
-    "jest": "^30.2.0",
-    "supertest": "^7.1.4"
+    "node": ">=18.0.0"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
