--- a/front/package.json
+++ b/front/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js"
   },
   "engines": {
-    "node": "22.21.0"
+    "node": ">=18.0.0"
   },
   "dependencies": {
     "express": "^5.1.0"
